# cmake_tutorial

./: CMakeLists.txt
app/: CMakeLists.txt  Main.cpp
extLib/breeds/: CMakeLists.txt
extLib/others/: CMakeLists.txt
lib/animals/: CMakeLists.txt  Dog.cpp
